package eapli.base.warehousemanagement.domain;

import eapli.base.product.domain.Product;



public class Bin {

    private Product product;


}
