@startuml
skinparam classAttributeIconSize 0

Class "WarehouseUI"{
}

Class "WarehouseController"{
+buildWarehouse(fileName)
+saveWarehouse(warehouse)
+deletePreviousWarehouse()
+alreadyInDatabase()
+findWarehouse()
+buildShelves()

+repositories()
+warehouses()
+saveWarehouse()
}




class "Warehouse"{
     -String jsonPath
     -String name
     -Double length
     -square width
     -String unit
     -List<Aisle> aisle
     -List<Aisle> AGVDocks
     +toString()
}

class "Aisle"{
     -Begin begin
     -End end
     -Depth depth
     -String accessibility
     -List<Row> rows
     +toString()
}

class "Row"{
     -Begin begin
     -End end
     -Integer numberShelves
     -List<Shelve> shelves
     +toString()
}

class "Shelve"{
     -Integer position
     -List<Bin> bin
}

class "Bin"{
     -Product product
     +sameAs(other)
     +identity()
}

class "Begin"{
     -int lSquareBegin
     -int wSquareBegin
     +toString()
}
class "End"{
     -int lSquareEnd
     -int wSquareEnd
     +toString()
}
class "Depth"{
     -int lSquareDepth
     -int wSquareDepth
     +toString()
}





class JsonParser {
+readJson(fileName)
}

class PersistenceContext {
-Logger LOGGER
-RepositoryFactory theFactory
+repositories()
}

class RepositoryFactory{
+warehouse(autoTx)
+warehouse()
}

class WarehouseRepository{
+findById(Long number)
}


WarehouseUI ..> WarehouseController
WarehouseController..> JsonParser
JsonParser "1" --> "*" Warehouse : reads and saves the path

Aisle "0..*" <-u- "1" Warehouse : contains
Row "0..*" <-r- "1" Aisle : contains
Shelve "0..*" <-u- "1" Row : contains
Bin "0..*" <-u- "1" Shelve : contains

Begin "1" <-u- "1" Aisle : contains
End "1" <-u- "1" Aisle : contains
Depth "1" <-u- "1" Aisle : contains

Begin "1" <-l- "1" Row : contains
End "1" <-l- "1" Row : contains


"WarehouseController" "1" --> "1" "PersistenceContext" :creates


"PersistenceContext" "1" --> "1" "RepositoryFactory" :creates


"RepositoryFactory" "1" --> "1" "WarehouseRepository"  :creates

"WarehouseController" "1" --> "1..*" "Warehouse" :saves

"Warehouse" "1" --> "1" "WarehouseRepository" : saves path to JSON in

@enduml